--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <div class="homebanner section no-pad-bot z-depth-1" id="index-banner">
   <div class="container">
     <h1 class="text_h center header cd-headline letters type">
-      Welcome
+      {  Welcome,
       <br><br>
       I'm <span class='tom-name'>Tom Cilano</span>
       <br>
-      <span class='role'>A Java Developer living in Orlando, FL</span>
+      <span class='role' style="color:greenyellow" >A Java Developer living in Orlando, FL</span>
       <br>
       <span class=''>Inspired to</span>
       <span class="cd-words-wrapper waiting">
@@ -70,7 +70,7 @@
                 <b>develop</b>
                 <b>problem solve</b>
                 <b>grow</b>
-            </span>;
+            </span>;}
       <br>
     </h1>
     <div class='contact-button'>
@@ -98,7 +98,7 @@
         </div>
         <div class="col s12 m4 l4">
           <div class='profile-pic center-align'>
-            <img src="img/profile.png" class='z-depth-1' alt='Profile Picture'height="170" width="260">
+            <img src="img/face.jpg" class='z-depth-1' alt='Profile Picture'height="400" width="250">
           </div>
           <div class='center-align' style="padding-top: 20px">
             <a href="img/Raul_Lavin_Resume.pdf" class="waves-effect waves-light btn" download='Raul_Lavin_Resume.pdf'>
@@ -205,6 +205,12 @@
           </div>
           <!-- End Skill Bar -->
 
+          <div class="skillbar clearfix " data-percent="55%">
+            <div class="skillbar-title" style="background: #467173;"><span>SQL</span></div>
+            <div class="skillbar-bar" style="background: #537372;"></div>
+            <div class="skill-bar-percent"></div>
+          </div>
+          <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="75%">
             <div class="skillbar-title" style="background: #0AA0CD;"><span>Spring</span></div>
@@ -212,15 +218,6 @@
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
-
-
-          <div class="skillbar clearfix " data-percent="65%">
-            <div class="skillbar-title" style="background: #467173;"><span>SQL</span></div>
-            <div class="skillbar-bar" style="background: #537372;"></div>
-            <div class="skill-bar-percent"></div>
-          </div>
-          <!-- End Skill Bar -->
-
           <div class="skillbar clearfix " data-percent="60%">
             <div class="skillbar-title" style="background: #E74C17;"><span>HTML</span></div>
             <div class="skillbar-bar" style="background: #E76F41;"></div>
@@ -390,11 +387,11 @@
             <div class="personal-info">
               <h5 class='info-subtitle navy-text'>Get In Touch with Me!</h5>
               <div class='section contacts'>
-                <i class='tiny material-icons footer-icon'>perm_identity</i><span class='contact white-text'>Raul Lavin</span>
+                <i class='tiny material-icons footer-icon'>perm_identity</i><span class='contact white-text'>Tom Cilano</span>
               </div>
               <div class='divider'></div>
               <div class='section contacts'>
-                <i class='tiny material-icons footer-icon'>email</i><span class='contact'><a href="mailto:lavin.raul@yahoo.com" class="white-text">lavin.raul@yahoo.com</a></span>
+                <i class='tiny material-icons footer-icon'>email</i><span class='contact'><a href="mailto:TomCilano@gmail.com" class="white-text">TomCilano@Gmail.com</a></span>
               </div>
 
             </div>
