--- a/index.html
+++ b/index.html
@@ -53,24 +53,27 @@
     </div>
   </nav>
 </div>
-
+<div class="parallax-container">
+  <div class="parallax"><img src="img/base.png" alt="Woods Parallax Image"></div>
+</div>
 <!--Banner-->
 <div class="homebanner section no-pad-bot z-depth-1" id="index-banner">
-  <div class="container">
     <h1 class="text_h center header cd-headline letters type">
       {  Welcome,
       <br><br>
       I'm <span class='tom-name'>Tom Cilano</span>
       <br>
-      <span class='role' style="color:greenyellow" >A Java Developer living in Orlando, FL</span>
+      <span class='role' style="color:#1de9b6" >A Java Developer living in Orlando, FL</span>
       <br>
       <span class=''>Inspired to</span>
       <span class="cd-words-wrapper waiting">
-                <b class="is-visible">learn</b>
-                <b>develop</b>
-                <b>problem solve</b>
-                <b>grow</b>
-            </span>;}
+                <b class="is-visible">learn;</b>
+                <b>develop;</b>
+                <b>problem solve;</b>
+                <b>grow;</b>
+            </span>
+
+      }
       <br>
     </h1>
     <div class='contact-button'>
@@ -199,35 +202,35 @@
         </div>
         <div class='wow fadeIn'>
           <div class="skillbar clearfix " data-percent="80%">
-            <div class="skillbar-title" style="background: #B30D00;"><span>Java</span></div>
-            <div class="skillbar-bar" style="background: #DB5650;"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>Java</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="55%">
-            <div class="skillbar-title" style="background: #467173;"><span>SQL</span></div>
-            <div class="skillbar-bar" style="background: #537372;"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>SQL</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="75%">
-            <div class="skillbar-title" style="background: #0AA0CD;"><span>Spring</span></div>
-            <div class="skillbar-bar" style="background: #3DC0CD;"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>Spring</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
           <div class="skillbar clearfix " data-percent="60%">
-            <div class="skillbar-title" style="background: #E74C17;"><span>HTML</span></div>
-            <div class="skillbar-bar" style="background: #E76F41;"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>HTML</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="50%">
-            <div class="skillbar-title" style="background: #1A60B3;"><span>CSS</span></div>
-            <div class="skillbar-bar" style="background: #3A77B3;"></div>
+            <div class="skillbar-title" style="background: #035c08;"><span>CSS</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
@@ -311,18 +314,19 @@
         <div class="col s12 m4 l4">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator z-depth-1" src="img/pongie.png" alt='Image'>
+              <img class="activator z-depth-1" src="img/swagger.png" alt='Image'>
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">PONGie<i class="mdi-navigation-more-vert right"></i></span>
+              <span class="card-title activator grey-text text-darken-4">Pen&Paper Repo<i class="mdi-navigation-more-vert right"></i></span>
               <br>
-              <a href="https://github.com/RLavin/PONGie" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
-              <a href="https://tiy-pingpong.herokuapp.com/login.jsp" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Demo</a>
+              <a href="https://github.com/TomCilano/PnPRepo.git" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
+              <a href="https://penandpaper.herokuapp.com/swagger-ui.html#/" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Demo</a>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">PONGie <i class="mdi-navigation-close right"></i></span>
-              <p>PONGie is a ping pong scoreboard application design to log matches and keep count of wins and losses.</p>
-              <p>The server-side architecture was built with Spring Framework to provide a RESTful API that was used to create a iOS app as well.</p>
+              <p>Pen and paper repo lets you create and persist DnD characters. This program runs through heroku so the Initial
+              start-up is a little lengthy.</p>
+              <p>The server-side architecture was built with Spring Framework to provide a RESTful API, exposed via swagger</p>
               <p>Tech: Java, PostgreSQL, H2, Heroku, SpringBoot</p>
             </div>
           </div>
@@ -330,18 +334,18 @@
         <div class="col s12 m4 l4">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator z-depth-1" src="img/MovieDatabase.png" alt='Image'>
+              <img class="activator z-depth-1" src="img/WizardBattle.png" alt='Image'>
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Movie Database <i class="mdi-navigation-more-vert right"></i></span>
+              <span class="card-title activator grey-text text-darken-4">Wizard Battle <i class="mdi-navigation-more-vert right"></i></span>
               <br>
-              <a href="https://github.com/RLavin/Movie-Database" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
+              <a href="https://github.com/TomCilano/WizardBattle.git" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Movie Database <i class="mdi-navigation-close right"></i></span>
-              <p>Movie Database was a class weekend project to display Movies using a third party API and display Now Playing movies!</p>
-              <p>The server-side architecture was built with Java to provide a RESTful API.</p>
-              <p>Tech: Java, Html, Spring, Swagger API </p>
+              <span class="card-title grey-text text-darken-4">Wizard Battle <i class="mdi-navigation-close right"></i></span>
+              <p>First Project in Java my first week of learning code. It's a simple game all in one method.</p>
+              <p>This game runs in the console. Good luck! </p>
+              <p>Tech: Java </p>
             </div>
           </div>
         </div>
@@ -351,17 +355,17 @@
               <img class="activator z-depth-1" src="img/Budget.png" alt=' Image'>
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Budget<i class="mdi-navigation-more-vert right"></i></span>
+              <span class="card-title activator grey-text text-darken-4">My Budget<i class="mdi-navigation-more-vert right"></i></span>
               <br>
-              <a href="https://github.com/RLavin/Budget" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
+              <a href="https://github.com/TomCilano/budget.git" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Code</a>
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Budget <i class="mdi-navigation-close right"></i></span>
+              <span class="card-title grey-text text-darken-4">My Budget <i class="mdi-navigation-close right"></i></span>
               <p>
-                Budget lets you keep track of everyday expenses as well as priorities and calculates if your budget amount is at a desirable amount.
+              The budget app allows you to take account of you spending, by letting you create a budget and measure your spending against it.
               </p>
               <p>The deployment was to run on local host for a web application.</p>
-              <p>Tech: Java, JDBC, PostgreSQL, Servlets,</p>
+              <p>Tech: Java, JDBC, PostgreSQL,</p>
             </div>
           </div>
         </div>
