changed profile pic

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <br>
       <span class='role' style="color:#1de9b6" >A Java Developer living in Orlando, FL</span>
       <br>
-      <span class=''>Inspired to</span>
+      <span class=''>Determined to</span>
       <span class="cd-words-wrapper waiting">
                 <b class="is-visible">learn;</b>
                 <b>develop;</b>
@@ -85,6 +85,17 @@
 <div id='contact' class="section scrollspy">
   <div class="wow fadeIn">
     <div class='container'>
+      <div class="col s12 m4 l4">
+        <div class='profile-pic center-align'>
+          <img src="img/face.jpg" class='z-depth-1' alt='Profile Picture'height="400" width="250">
+        </div>
+        <div class='center-align' style="padding-top: 20px">
+          <a href="img/Raul_Lavin_Resume.pdf" class="waves-effect waves-light btn" download='Raul_Lavin_Resume.pdf'>
+            <i class="fa fa-download"></i>
+            Resume
+          </a>
+        </div>
+      </div>
       <div class="row">
         <div class="col s12 m4 l4">
           <div class='profile-about'>
@@ -97,17 +108,6 @@
               Ennui microdosing lyft, messenger bag everyday carry subway tile food truck narwhal godard.
               <br>
             </p>
-          </div>
-        </div>
-        <div class="col s12 m4 l4">
-          <div class='profile-pic center-align'>
-            <img src="img/face.jpg" class='z-depth-1' alt='Profile Picture'height="400" width="250">
-          </div>
-          <div class='center-align' style="padding-top: 20px">
-            <a href="img/Raul_Lavin_Resume.pdf" class="waves-effect waves-light btn" download='Raul_Lavin_Resume.pdf'>
-              <i class="fa fa-download"></i>
-              Resume
-            </a>
           </div>
         </div>
         <div class="col s12 m4 l4">
@@ -230,6 +230,20 @@
 
           <div class="skillbar clearfix " data-percent="50%">
             <div class="skillbar-title" style="background: #035c08;"><span>CSS</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
+            <div class="skill-bar-percent"></div>
+          </div>
+          <!-- End Skill Bar -->
+
+          <div class="skillbar clearfix " data-percent="40%">
+            <div class="skillbar-title" style="background: #035c08;"><span>C#</span></div>
+            <div class="skillbar-bar" style="background: #25731f;"></div>
+            <div class="skill-bar-percent"></div>
+          </div>
+          <!-- End Skill Bar -->
+
+          <div class="skillbar clearfix " data-percent="35%">
+            <div class="skillbar-title" style="background: #035c08;"><span>.Net</span></div>
             <div class="skillbar-bar" style="background: #25731f;"></div>
             <div class="skill-bar-percent"></div>
           </div>
@@ -364,7 +378,6 @@
               <p>
               The budget app allows you to take account of you spending, by letting you create a budget and measure your spending against it.
               </p>
-              <p>The deployment was to run on local host for a web application.</p>
               <p>Tech: Java, JDBC, PostgreSQL,</p>
             </div>
           </div>
