--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                     <li>Windows</li>
                     <li>Postman</li>
                     <li>Intellij IDE</li>
+                    <li>Visual Studio</li>
                   </ul>
                 </div>
                 <div class="col s6 m3 l3">
@@ -337,7 +338,7 @@
               <a href="https://penandpaper.herokuapp.com/swagger-ui.html#/" class='waves-effect waves-light code-card-btn white-text z-depth-1'>Demo</a>
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">PONGie <i class="mdi-navigation-close right"></i></span>
+              <span class="card-title grey-text text-darken-4">Pen & Paper Repo <i class="mdi-navigation-close right"></i></span>
               <p>Pen and paper repo lets you create and persist DnD characters. This program runs through heroku so the Initial
               start-up is a little lengthy.</p>
               <p>The server-side architecture was built with Spring Framework to provide a RESTful API, exposed via swagger</p>
