--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </nav>
 </div>
 <div class="parallax-container">
-  <div class="parallax"><img src="img/base.png" alt="Woods Parallax Image"></div>
+  <div class="parallax"><img src="img/base.png"></div>
 </div>
 <!--Banner-->
 <div class="homebanner section no-pad-bot z-depth-1" id="index-banner">
@@ -187,7 +187,9 @@
     </div>
   </div>
 </div>
-
+<div class="parallax-container">
+  <div class="parallax"><img src="img/mycode2.png"></div>
+</div>
 
 <!-- Skills -->
 <div id='skills' class="section scrollspy">
@@ -391,7 +393,7 @@
 
 <!--Parallax-->
 <div class="parallax-container">
-  <div class="parallax"><img src="img/base.png" alt="Woods Parallax Image"></div>
+  <div class="parallax"><img src="img/mycode4.png"></div>
 </div>
 
 <!--Footer-->
