--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <br>
       <span class=''>Determined to</span>
       <span class="cd-words-wrapper waiting">
-                <b class="is-visible">learn;</b>
-                <b>develop;</b>
-                <b>problem solve;</b>
-                <b>grow;</b>
+                <b class="is-visible">learn();</b>
+                <b>develop();</b>
+                <b>problemSolve();</b>
+                <b>grow();</b>
             </span>
 
       }
@@ -122,8 +122,10 @@
                 <i class='tiny material-icons'>email</i><span class='contact'><a href="mailto:TomCilano@gmail.com" class='gray-text'>TomCilano@gmail.com</a></span>
               </div>
               <div class='divider'></div>
+              <div class='section contacts'>
+                <i class='tiny material-icons'>tab</i> <a href="http://www.TomCilano.com">&nbsp&nbsp TomCilano.com</a>
 
-            </div>
+              </div>
           </div>
           <div class="row">
             <div class="social-buttons">
@@ -268,9 +270,8 @@
                   </p>
                   <ul class="gray-text">
                     <li>Object-Oriented Design</li>
-                    <li>Building RESTful APIs</li>
+                    <li>RESTful APIs</li>
                     <li>MVC Fundamentals</li>
-                    <li>Heroku</li>
                     <li>Github</li>
                     <li>JSON</li>
                     <li>Git</li>
@@ -285,8 +286,10 @@
                     <li>OSX</li>
                     <li>Windows</li>
                     <li>Postman</li>
+                    <li>Data Grips</li>
                     <li>Intellij IDE</li>
-                    <li>Visual Studio</li>
+                    <li>Eclipse</li>
+                    <li>MS Visual Studio</li>
                   </ul>
                 </div>
                 <div class="col s6 m3 l3">
@@ -405,7 +408,7 @@
         <form class="col s12">
           <div class="row">
             <div class="personal-info">
-              <h5 class='info-subtitle navy-text'>Get In Touch with Me!</h5>
+              <h5 class='info-subtitle navy-text' style="color: white">Contacts</h5>
               <div class='section contacts'>
                 <i class='tiny material-icons footer-icon'>perm_identity</i><span class='contact white-text'>Tom Cilano</span>
               </div>
@@ -413,13 +416,16 @@
               <div class='section contacts'>
                 <i class='tiny material-icons footer-icon'>email</i><span class='contact'><a href="mailto:TomCilano@gmail.com" class="white-text">TomCilano@Gmail.com</a></span>
               </div>
-
+              <div class='divider'></div>
+              <div class='section contacts'>
+              <i class='tiny material-icons footer-icon'>tab</i> <a href="http://www.TomCilano.com">&nbsp&nbsp&nbspTomCilano.com</a>
+            </div>
             </div>
           </div>
         </form>
       </div>
       <div class="col m4 l4 s12 right">
-        <h5 class="navy-text">Social</h5>
+        <h5 class="navy-text" style="color: white">Social Links</h5>
         <ul>
           <li>
             <a class="white-text" href="https://github.com/TomCilano">
