--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <b class="is-visible">learn();</b>
                 <b>develop();</b>
                 <b>problemSolve();</b>
-                <b>grow();</b>
+                <b>beAwesome();</b>
             </span>
 
       }
