--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img src="img/face.jpg" class='z-depth-1' alt='Profile Picture'height="400" width="250">
           </div>
           <div class='center-align' style="padding-top: 20px">
-            <a href="img/Raul_Lavin_Resume.pdf" class="waves-effect waves-light btn" download='Raul_Lavin_Resume.pdf'>
+            <a href="img/Resume.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
               <i class="fa fa-download"></i>
               Resume
             </a>
