--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col s12 m4 l4">
           <div class='profile-pic center-align'>
-            <img src="img/face.jpg" class='z-depth-1' alt='Profile Picture'height="400" width="250">
+            <img src="img/faceIt.jpg" class='z-depth-1' alt='Profile Picture'height="286" width="250">
           </div>
           <div class='center-align' style="padding-top: 20px">
             <a href="img/Resume.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
