--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <span class="cd-words-wrapper waiting">
                 <b class="is-visible">learn();</b>
                 <b>develop();</b>
-                <b>problemSolve();</b>
+                <b>problemSolve()</b>
                 <b>beAwesome();</b>
             </span>
 
