--- a/index.html
+++ b/index.html
@@ -162,25 +162,17 @@
         <div class="col s12">
           <div class="about-body z-depth-1">
             <p class="about-body-paragraph gray-text">
-              Art party unicorn cronut umami, fap pug poutine sartorial. Banh mi flexitarian trust fund,
-              kale chips brunch vexillologist street art hashtag pabst messenger bag. Live-edge narwhal ennui,
-              pickled microdosing street art cray heirloom crucifix sriracha letterpress. Brooklyn flannel tattooed,
-              roof party pour-over franzen cronut fingerstache offal. Ennui microdosing lyft, messenger bag everyday
-              carry subway tile food truck narwhal godard.
+              Blue bottle meditation umami paleo. Bespoke coloring book humblebrag flannel leggings hoodie. Irony four dollar toast artisan disrupt godard direct trade. Man bun salvia mlkshk, bushwick iceland fixie bicycle rights. Prism flannel stumptown hammock truffaut. Gentrify lo-fi blue bottle, affogato yr +1 VHS vinyl. Offal iceland kitsch, paleo copper mug DIY tattooed occupy gentrify.
+
+
             </p>
             <p class="about-body-paragraph gray-text">
-              Art party unicorn cronut umami, fap pug poutine sartorial. Banh mi flexitarian trust fund,
-              kale chips brunch vexillologist street art hashtag pabst messenger bag. Live-edge narwhal ennui,
-              pickled microdosing street art cray heirloom crucifix sriracha letterpress. Brooklyn flannel tattooed,
-              roof party pour-over franzen cronut fingerstache offal. Ennui microdosing lyft, messenger bag everyday
-              carry subway tile food truck narwhal godard.
+              Squid lo-fi YOLO, hammock pitchfork next level ugh succulents tilde pabst meditation la croix fashion axe vinyl. Air plant synth asymmetrical, ennui sartorial letterpress pour-over scenester vape. Roof party slow-carb seitan, synth hoodie microdosing ramps prism iPhone green juice craft beer chartreuse. Occupy bitters seitan vape, ramps microdosing poke hammock butcher. Selvage lyft yr selfies. Chicharrones pinterest prism mumblecore. Viral tofu VHS echo park marfa.
+
+
             </p>
             <p class="about-body-paragraph gray-text">
-              Art party unicorn cronut umami, fap pug poutine sartorial. Banh mi flexitarian
-              trust fund, kale chips brunch vexillologist street art hashtag pabst messenger bag.
-              Live-edge narwhal ennui, pickled microdosing street art cray heirloom crucifix sriracha letterpress.
-              Brooklyn flannel tattooed, roof party pour-over franzen cronut fingerstache offal. Ennui microdosing
-              lyft, messenger bag everyday carry subway tile food truck narwhal godard.
+              Blog knausgaard flexitarian, cardigan dreamcatcher asymmetrical pour-over austin cornhole letterpress authentic stumptown. Health goth craft beer ethical raw denim, snackwave cardigan distillery asymmetrical tilde wolf. Crucifix pinterest beard, enamel pin celiac four dollar toast gastropub. Poke tattooed disrupt slow-carb thundercats. Gochujang snackwave iceland, before they sold out hot chicken occupy shabby chic cliche hell of post-ironic. Four dollar toast migas woke YOLO wolf. Tumblr quinoa poke farm-to-table, leggings hashtag locavore.
             </p>
           </div>
         </div>
