--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </div>
 
 <!--Navigation-->
+
 <div class="navbar-fixed">
   <nav id="nav_f" class="default_color" role="navigation">
     <div class="container">
@@ -75,9 +76,9 @@
       }
       <br>
     </h1>
-    <div class='contact-button'>
+   <!-- <div class='contact-button'>
       <a class="waves-effect waves-light btn" href="#contact"><i class='material-icons left'>question_answer</i>Contact Me</a>
-    </div>
+    </div>-->
   </div>
 </div>
 <!-- Contact -->
@@ -109,7 +110,7 @@
             </p>
           </div>
         </div>
-        <div class="col s12 m4 l4">
+        <div class="col s10 m4 l4">
           <div class='row'>
             <div class="personal-info">
               <h5 class='info-subtitle default_color_header'>CONTACT</h5>
@@ -127,6 +128,7 @@
               </div>
           </div>
           <div class="row">
+            <div>
             <div class="social-buttons">
               <a href="http://github.com/TomCilano" class='btn-floating waves-effect waves-light'>
                 <i class='small fa fa-github'></i>
@@ -211,8 +213,8 @@
           <!-- End Skill Bar -->
 
           <div class="skillbar clearfix " data-percent="75%">
-            <div class="skillbar-title" style="background: #035c08;"><span>Spring</span></div>
-            <div class="skillbar-bar" style="background: #25731f;"></div>
+            <div class="skillbar-title" style="background: rgba(3, 92, 8, 0.75);"><span>Spring</span></div>
+            <div class="skillbar-bar" style="background: rgba(37, 115, 31, 0.74);"></div>
             <div class="skill-bar-percent"></div>
           </div>
           <!-- End Skill Bar -->
