--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
       <div class="row">
         <div class="col s12 m4 l4">
           <div class='profile-pic center-align'>
-            <img src="img/profile3.jpg" class='z-depth-1' alt='Profile Picture'height="295" width="210">
+            <img src="img/facetime.jpg" class='z-depth-1' alt='Profile Picture'height="350" width="210">
           </div>
           <div class='center-align' style="padding-top: 20px">
-            <a href="img/Resume.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
+            <a href="img/Resume2.pdf" class="waves-effect waves-light btn" download='Resume.pdf'>
               <i class="fa fa-download"></i>
               Resume
             </a>
@@ -101,34 +101,39 @@
           <div class='profile-about'>
             <h5 class='about-subtitle default_color_header'>MY STORY</h5>
             <p class='gray-text my-story'>
-              Art party unicorn cronut umami, fap pug poutine sartorial. Banh mi flexitarian
-              trust fund, kale chips brunch vexillologist street art hashtag pabst messenger bag.
-              Live-edge narwhal ennui, pickled microdosing street art cray heirloom crucifix sriracha
-              letterpress. Brooklyn flannel tattooed, roof party pour-over franzen cronut fingerstache offal.
-              Ennui microdosing lyft, messenger bag everyday carry subway tile food truck narwhal godard.
+              I am a motivated Java developer looking to be a part of a software development team to contribute
+              to and learn from. Having recently changed careers from the hospitality field, and having graduated
+              from the Iron Yard (a back-end engineering accelerator,) I'm excited to put my newly acquired skills
+              to use solving everyday problems.
               <br>
             </p>
           </div>
         </div>
-        <div class="col s10 m4 l4">
+        <div class="col s14 m4 l4">
           <div class='row'>
+
             <div class="personal-info">
-              <h5 class='info-subtitle default_color_header'>CONTACT</h5>
+
+              <h5 class='info-subtitle default_color_header'>&nbsp&nbsp&nbsp&nbspCONTACT</h5>
               <div class='section contacts'>
+                &nbsp&nbsp&nbsp&nbsp
                 <i class='tiny material-icons'>perm_identity</i><span class='contact gray-text'>Tom Cilano</span>
               </div>
               <div class='divider'></div>
               <div class='section contacts'>
+                &nbsp&nbsp &nbsp&nbsp
                 <i class='tiny material-icons'>email</i><span class='contact'><a href="mailto:TomCilano@gmail.com" class='gray-text'>TomCilano@gmail.com</a></span>
               </div>
               <div class='divider'></div>
               <div class='section contacts'>
+                &nbsp&nbsp &nbsp&nbsp
                 <i class='tiny material-icons'>tab</i> <a href="http://www.TomCilano.com">&nbsp&nbsp TomCilano.com</a>
 
               </div>
           </div>
           <div class="row">
             <div>
+              &nbsp&nbsp &nbsp&nbsp&nbsp&nbsp
             <div class="social-buttons">
               <a href="http://github.com/TomCilano" class='btn-floating waves-effect waves-light'>
                 <i class='small fa fa-github'></i>
@@ -164,8 +169,8 @@
         <div class="col s12">
           <div class="about-body z-depth-1">
             <p class="about-body-paragraph gray-text">
-              Blue bottle meditation umami paleo. Bespoke coloring book humblebrag flannel leggings hoodie. Irony four dollar toast artisan disrupt godard direct trade. Man bun salvia mlkshk, bushwick iceland fixie bicycle rights. Prism flannel stumptown hammock truffaut. Gentrify lo-fi blue bottle, affogato yr +1 VHS vinyl. Offal iceland kitsch, paleo copper mug DIY tattooed occupy gentrify.
-
+              I grew up in Celebration Florida after my family had relocated from northern New Jersey. There I attended
+              A home-school cooperative called the Navigator school
 
             </p>
             <p class="about-body-paragraph gray-text">
@@ -276,10 +281,10 @@
                   <ul class="gray-text">
                     <li>OSX</li>
                     <li>Windows</li>
-                    <li>Data Grips</li>
-                    <li>Intellij IDE</li>
+                    <li>Intellij</li>
                     <li>Eclipse</li>
                     <li>MS Visual Studio</li>
+                    <li>Data Grips</li>
                   </ul>
                 </div>
                 <div class="col s6 m3 l3">
@@ -334,7 +339,7 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Pen & Paper Repo <i class="mdi-navigation-close right"></i></span>
-              <p>Pen and paper repo lets you create and persist DnD characters. This program runs through heroku so the Initial
+              <p>Pen and paper repo lets you create and persist DnD characters. This program runs through Heroku so the Initial
               start-up is a little lengthy.</p>
               <p>The server-side architecture was built with Spring Framework to provide a RESTful API, exposed via swagger</p>
               <p>Tech: Java, PostgreSQL, H2, Heroku, SpringBoot</p>
