--- a/index.html
+++ b/index.html
@@ -169,18 +169,19 @@
         <div class="col s12">
           <div class="about-body z-depth-1">
             <p class="about-body-paragraph gray-text">
-              I grew up in Celebration Florida after my family had relocated from northern New Jersey. There I attended
-              A home-school cooperative called the Navigator school
+              I grew up in Celebration Florida after my family had relocated from northern New Jersey.
+              There I attended a small home-school cooperative called the Navigator School. After graduating
+              high school I studied biblical scholarship at Eckerd College, graduating in 2010. After my graduation
+              I was offered an opportunity to work as a pastry chef, which I did with great joy until the shop could
+              no longer sustain itself. After which I got a job at Mulligan's Pub, a small divey Irish bar, located
+              just outside Celebration Florida.
+            </p>
+            <p class="about-body-paragraph gray-text">
+              After working there for about 6 years I realized that working at a bar and was something that I couldn't see myself doing for much longer, and begin searching for more interesting career opportunities. Vargas had mentioned that coding was something I should look into and sent me some introductory information. Having tried calling when I was much younger and finding it to be a fairly difficult I didn't think it would be something that I could jump into at this point, however, when I started working through if I felt I was learning very rapidly. After a few months of self teaching I realized that if I was going to get to a place where I could be hireable but I would need to dedicate myself fully to learning how to code.
 
             </p>
             <p class="about-body-paragraph gray-text">
-              Squid lo-fi YOLO, hammock pitchfork next level ugh succulents tilde pabst meditation la croix fashion axe vinyl. Air plant synth asymmetrical, ennui sartorial letterpress pour-over scenester vape. Roof party slow-carb seitan, synth hoodie microdosing ramps prism iPhone green juice craft beer chartreuse. Occupy bitters seitan vape, ramps microdosing poke hammock butcher. Selvage lyft yr selfies. Chicharrones pinterest prism mumblecore. Viral tofu VHS echo park marfa.
-
-
-            </p>
-            <p class="about-body-paragraph gray-text">
-              Blog knausgaard flexitarian, cardigan dreamcatcher asymmetrical pour-over austin cornhole letterpress authentic stumptown. Health goth craft beer ethical raw denim, snackwave cardigan distillery asymmetrical tilde wolf. Crucifix pinterest beard, enamel pin celiac four dollar toast gastropub. Poke tattooed disrupt slow-carb thundercats. Gochujang snackwave iceland, before they sold out hot chicken occupy shabby chic cliche hell of post-ironic. Four dollar toast migas woke YOLO wolf. Tumblr quinoa poke farm-to-table, leggings hashtag locavore.
-            </p>
+              I began looking for coding school and found The Iron Yard, which is a 12-week immersive boot-camp. So I quit my job, enrolled, and spent 12 weeks coding all day everyday (and loving every second of it.) now I'm at a place where I'm looking to join the team of software Developers to both put my current skills to use and continue learning to solve everyday problems for people through code.            </p>
           </div>
         </div>
       </div>
