--- a/index.html
+++ b/index.html
@@ -177,11 +177,20 @@
               just outside Celebration Florida.
             </p>
             <p class="about-body-paragraph gray-text">
-              After working there for about 6 years I realized that working at a bar and was something that I couldn't see myself doing for much longer, and begin searching for more interesting career opportunities. Vargas had mentioned that coding was something I should look into and sent me some introductory information. Having tried calling when I was much younger and finding it to be a fairly difficult I didn't think it would be something that I could jump into at this point, however, when I started working through if I felt I was learning very rapidly. After a few months of self teaching I realized that if I was going to get to a place where I could be hireable but I would need to dedicate myself fully to learning how to code.
+              After working there for about 6 years I realized that working at a bar and was something that I
+              couldn't see myself doing for much longer, and began searching for more interesting career opportunities.
+              A bar guest had mentioned that coding was something I should look into and sent me some introductory information.
+              Having tried to code when I was much younger and finding it to be a fairly difficult I didn't think it would
+              be something that I could jump into at this point, however, when I started teaching myself I felt I was
+              learning very rapidly. After a few months of self directed study I realized that if I was going to get to a place
+              where I could be hireable but I would need to dedicate myself fully to learning how to code.
 
             </p>
             <p class="about-body-paragraph gray-text">
-              I began looking for coding school and found The Iron Yard, which is a 12-week immersive boot-camp. So I quit my job, enrolled, and spent 12 weeks coding all day everyday (and loving every second of it.) now I'm at a place where I'm looking to join the team of software Developers to both put my current skills to use and continue learning to solve everyday problems for people through code.            </p>
+              I began looking for coding school and found The Iron Yard, which is a 12-week immersive boot-camp.
+              So I quit my job, enrolled, and spent 12 weeks coding all day everyday (and loving every second of it.)
+              Now I'm at a place where I'm looking to join the team of software Developers to both put my current skills
+              to use and continue learning to solve everyday problems for people through code.            </p>
           </div>
         </div>
       </div>
